--- a/config.toml
+++ b/config.toml
@@ -83,7 +83,7 @@ googleAnalytics = "UA-35024589-1"
 
 [[menu.main]]
     name = "Blog"
-    url = ""
+    url = "/"
     weight = 1
 
 [[menu.main]]
