--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -23,7 +23,7 @@ copyright = "Copyright &copy; 2011–{year} Dermot O'Halloran"
 theme = "academic"
 
 # Get last modified date for content from Git?
-enableGitInfo = false
+enableGitInfo = true
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
