--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -3,7 +3,7 @@
 # https://nunocoracao.github.io/blowfish/docs/getting-started/
 
 theme = "blowfish"
-baseURL = "https://practicalreason.net/"
+baseURL = "/"
 defaultContentLanguage = "en"
 
 enableRobotsTXT = true
