Add New Blowfish theme

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -7,7 +7,7 @@ baseURL = "/"
 defaultContentLanguage = "en"
 
 enableRobotsTXT = true
-pagination.pagerSize = 20
+"pagination.pagerSize" = "20"
 summaryLength = 20
 
 buildDrafts = false
