--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,8 +6,8 @@
 # https://nunocoracao.github.io/blowfish/docs/configuration/#theme-parameters
 
 colorScheme = "one-light"
-defaultAppearance = "dark" # valid options: light or dark
-autoSwitchAppearance = true
+defaultAppearance = "light" # valid options: light or dark
+autoSwitchAppearance = false
 defaultBackgroundImage = "image.jpg"
 disableImageOptimization = false
 
@@ -24,7 +24,7 @@ mainSections = ["posts"]
  # showMenu = true
   showCopyright = true
   showThemeAttribution = true
-  showAppearanceSwitcher = true
+  showAppearanceSwitcher = false
   showScrollToTop = true
 
 [homepage]
