--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -24,7 +24,7 @@ mainSections = ["posts"]
  # showMenu = true
   showCopyright = true
   showThemeAttribution = true
-  showAppearanceSwitcher = false
+  showAppearanceSwitcher = true
   showScrollToTop = true
 
 [homepage]
