--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -1,7 +1,7 @@
 languageCode = "en"
 languageName = "English"
 weight = 1
-title = "Reveting to Type"
+title = "Reverting to Type"
 
 [params]
   displayName = "EN"
